# AetherChat

./: .dockerignore  .env.example  .gitignore  Dockerfile.space  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
docker/: Dockerfile.api  Dockerfile.ui  docker-compose.yml
docs/: AetherChat_manual.md
notebooks/: fine_tune_qlora.ipynb
scripts/: generate_synthetic_data.py  seed_data.sh
src/api/: dependencies.py  main.py  middleware.py
src/api/routers/: chat.py  eval.py  ingest.py
src/core/: __init__.py  agent_graph.py  config.py
src/core/agent/: graph.py
src/core/llm/: __init__.py  base.py  openai_llm.py  vllm.py
src/core/memory/: conversation.py
src/core/retrieval/: hybrid_search.py
src/evaluation/: metrics.py  run_eval.py
src/evaluation/datasets/: sample_qa.json
src/ingestion/: chunker.py  loader.py  pipeline.py
src/ui/: app.py
tests/: test_api.py  test_hybrid.py  test_ingestion.py  test_retrieval.py
