[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "aetherchat"
version = "1.0.0"
description = "Enterprise RAG Chatbot with Agentic Retrieval"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "websockets>=12.0",
    "langchain>=0.2.0",
    "langchain-community>=0.2.0",
    "langchain-openai>=0.1.7",
    "langchain-qdrant>=0.1.0",
    "qdrant-client>=1.9.0",
    "pydantic-settings>=2.2.0",
    "FlagEmbedding>=1.2.0",
    "chainlit>=1.1.0",
    "pdfplumber>=0.10.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",
    "aiofiles>=23.2.0",
    "httpx>=0.27.0",
    "rank-bm25>=0.2.2",
    "mlflow>=2.12.0",
    "rouge-score>=0.1.2",
    "nltk>=3.8.1",
    "tiktoken>=0.7.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "ruff",
    "mypy",
    "types-aiofiles",
]

[tool.setuptools.packages.find]
where = ["."]